fix: overflow

--- a/src/components/ExperienceCard/styles.module.css
+++ b/src/components/ExperienceCard/styles.module.css
@@ -128,6 +128,12 @@
 @media (max-width: 768px) {
   .container {
     width: 100%;
+    height: auto
+  }
+  
+
+  .container[data-openeddetails="true"] {
+    height: auto;
   }
 }
 
@@ -137,7 +143,7 @@
   }
 
   .container[data-openeddetails="true"] {
-    height: 14rem;
+    max-height: 14rem;
   }
 }
 
@@ -147,8 +153,13 @@
   }
 
   .container[data-openeddetails="true"] {
-    height: 16rem;
+    max-height: 16rem;
     overflow: auto;
+  }
+
+  .description {
+    justify-content: start;
+    align-items: start;
   }
 }
 
